@@ -59,6 +59,7 @@ import org.apache.batik.gvt.renderer.ImageRenderer;
 import org.apache.batik.gvt.renderer.ImageRendererFactory;
 import org.apache.batik.gvt.text.Mark;
 import org.apache.batik.util.HaltingThread;
+import org.apache.batik.util.Platform;
 
 /**
  * This class represents a component which can display a GVT tree.
@@ -1183,7 +1184,12 @@ public abstract class AbstractJGVTComponent extends JComponent {
         public void mouseMoved(MouseEvent e) {
             selectInteractor(e);
             if (interactor != null) {
-                interactor.mouseMoved(e);
+            	// because the mouseDragged event doesn't seem to be generated on OSX when ctrl is held down
+            	if (Platform.isOSX &&
+            		interactor instanceof AbstractZoomInteractor)
+            		mouseDragged(e);
+            	else
+            		interactor.mouseMoved(e);
                 deselectInteractor();
             } else if (eventDispatcher != null) {
                 dispatchMouseMoved(e);
